--- a/BankingSoftware/customCss/cards.css
+++ b/BankingSoftware/customCss/cards.css
@@ -26,35 +26,35 @@ body {
     border: none
 }
 
-    .card::before {
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        content: "";
-        bottom: 0;
-        top: 0;
-        right: 0;
-        left: 0;
-        border-radius: 14px;
-        background: rgb(63, 94, 251);
-        background: linear-gradient(90deg, rgba(63, 94, 251, 1) 0%, rgba(240, 50, 89, 1) 100%);
-        opacity: 0.8
-    }
+.card::before {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    content: "";
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    border-radius: 14px;
+    background: rgb(63, 94, 251);
+    background: linear-gradient(90deg, rgba(63, 94, 251, 1) 0%, rgba(240, 50, 89, 1) 100%);
+    opacity: 0.8
+}
 
-    .card::after {
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        content: "";
-        bottom: 0;
-        top: 0;
-        right: 0;
-        left: 0;
-        border-radius: 14px;
-        background: rgb(63, 94, 251);
-        background: linear-gradient(90deg, rgba(63, 94, 251, 1) 0%, rgba(240, 50, 89, 1) 100%);
-        clip-path: polygon(28% 13%, 48% 45%, 75% 63%, 100% 99%, 0 100%, 0% 60%, 0 0)
-    }
+.card::after {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    content: "";
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    border-radius: 14px;
+    background: rgb(63, 94, 251);
+    background: linear-gradient(90deg, rgba(63, 94, 251, 1) 0%, rgba(240, 50, 89, 1) 100%);
+    clip-path: polygon(28% 13%, 48% 45%, 75% 63%, 100% 99%, 0 100%, 0% 60%, 0 0)
+}
 
 .upper {
     display: flex;
@@ -63,17 +63,30 @@ body {
     z-index: 1
 }
 
-    .upper h6 {
-        font-size: 18px
-    }
+.upper h6 {
+    font-size: 18px
+}
 
-    .upper h4 {
-        font-size: 30px;
-        text-transform: uppercase
-    }
+.upper h4 {
+    font-size: 30px;
+    text-transform: uppercase
+}
 
 .lower {
     position: absolute;
     bottom: 20px;
     z-index: 1
+}
+.btn22 {
+    background: transparent;
+    border: 2px solid #4285f4;
+    color: #4285f4;
+    position: absolute;
+    left: 50%;
+
+}
+
+.btn22:hover {
+    background: #4285f4;
+    color: #fff;
 }
