--- a/BankingSoftware/Home.Master
+++ b/BankingSoftware/Home.Master
@@ -36,7 +36,7 @@
                         <asp:LinkButton CssClass="nav-link"  runat="server" href="addfunds.aspx">Add Funds</asp:LinkButton>
                     </li>
                     <li class="nav-item active">
-                        <asp:LinkButton CssClass="nav-link"  runat="server">Apply for loan</asp:LinkButton>
+                        <asp:LinkButton CssClass="nav-link"  runat="server" href="WebForm7.aspx">Apply for loan</asp:LinkButton>
                     </li>
                 </ul>
 
