--- a/BankingSoftware/Home.Master
+++ b/BankingSoftware/Home.Master
@@ -7,7 +7,7 @@
     <title></title>
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -36,13 +36,13 @@
                         <asp:LinkButton CssClass="nav-link"  runat="server" href="addfunds.aspx">Add Funds</asp:LinkButton>
                     </li>
                     <li class="nav-item active">
-                        <asp:LinkButton CssClass="nav-link"  runat="server" href="WebForm7.aspx">Apply for loan</asp:LinkButton>
+                        <asp:LinkButton CssClass="nav-link"  runat="server" href="loan.aspx">Apply for loan</asp:LinkButton>
                     </li>
                 </ul>
 
                  <ul class="navbar-nav">
                       <li class="nav-item active">
-                        <asp:LinkButton CssClass="nav-link"  runat="server" href="login.aspx">Login</asp:LinkButton>
+                        <asp:LinkButton CssClass="nav-link"  runat="server" href="login.aspx">Sign in</asp:LinkButton>
                     </li>
                     <li class="nav-item active">
                         <asp:LinkButton CssClass="nav-link"  runat="server" href="signup.aspx">Sign up</asp:LinkButton>
