--- a/BankingSoftware/Home.Master
+++ b/BankingSoftware/Home.Master
@@ -47,6 +47,9 @@
                     <li class="nav-item active">
                         <asp:LinkButton CssClass="nav-link"  runat="server" href="signup.aspx">Sign up</asp:LinkButton>
                     </li>
+                     <li class="nav-item active">
+                        <asp:LinkButton CssClass="nav-link"  runat="server" href="javascript:void(0)">Logout</asp:LinkButton>
+                    </li>
                  </ul>
 
             </nav>    
