--- a/BankingSoftware/Home.Master
+++ b/BankingSoftware/Home.Master
@@ -42,13 +42,13 @@
 
                  <ul class="navbar-nav">
                       <li class="nav-item active">
-                        <asp:LinkButton CssClass="nav-link"  runat="server" href="login.aspx">Sign in</asp:LinkButton>
+                        <asp:LinkButton CssClass="nav-link"  runat="server" href="login.aspx" ID="signin">Sign in</asp:LinkButton>
                     </li>
                     <li class="nav-item active">
-                        <asp:LinkButton CssClass="nav-link"  runat="server" href="signup.aspx">Sign up</asp:LinkButton>
+                        <asp:LinkButton CssClass="nav-link"  runat="server" href="signup.aspx" ID="signup">Sign up</asp:LinkButton>
                     </li>
                      <li class="nav-item active">
-                        <asp:LinkButton CssClass="nav-link"  runat="server" href="javascript:void(0)">Logout</asp:LinkButton>
+                        <asp:LinkButton CssClass="nav-link"  runat="server" href="javascript:void(0)" Visible="false" ID="logout">Logout</asp:LinkButton>
                     </li>
                  </ul>
 
