--- a/BankingSoftware/Home.Master
+++ b/BankingSoftware/Home.Master
@@ -22,6 +22,10 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-light rounded ms-4 me-4" style="background-color: #e3f2fd">
 
+                <a class="navbar-brand" href="homepage.aspx">
+                    <img src="imgs/logo.png" class="rounded ms-1" width="35" height="35"/>
+                </a>
+
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item active">
                         <asp:LinkButton CssClass="nav-link" ID="ViewBalance" runat="server" href="viewBalance.aspx">View Balance</asp:LinkButton>
@@ -39,10 +43,9 @@
                         <asp:LinkButton CssClass="nav-link" ID="Loan" runat="server" href="applyforloan.aspx">Apply for loan</asp:LinkButton>
                     </li>
                 </ul>
-
-                 <ul class="navbar-nav">
+                <ul class="navbar-nav">
                       <li class="nav-item active">
-                        <asp:LinkButton CssClass="nav-link"  runat="server" href="signIn.aspx" ID="signin">Sign in</asp:LinkButton>
+                        <asp:LinkButton CssClass="nav-link"  runat="server" href="signin.aspx" ID="signin">Sign in</asp:LinkButton>
                     </li>
                     <li class="nav-item active">
                         <asp:LinkButton CssClass="nav-link"  runat="server" href="signup.aspx" ID="signup">Sign up</asp:LinkButton>
@@ -51,7 +54,6 @@
                         <asp:LinkButton CssClass="nav-link"  runat="server" OnClick="Logout_Click" Visible="false" ID="Logout">Logout</asp:LinkButton>
                     </li>
                  </ul>
-
             </nav>    
         </div>        
 
