--- a/BankingSoftware/customCss/cards.css
+++ b/BankingSoftware/customCss/cards.css
@@ -9,6 +9,7 @@
 }
 
 .card {
+    box-sizing: initial;
     font-family: 'Maven Pro', sans-serif;
     height: 180px;
     width: 350px;
@@ -25,35 +26,37 @@
     border: none
 }
 
-.card::before {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    content: "";
-    bottom: 0;
-    top: 0;
-    right: 0;
-    left: 0;
-    border-radius: 14px;
-    background: rgb(63, 94, 251);
-    background: linear-gradient(90deg, rgba(63, 94, 251, 1) 0%, rgba(240, 50, 89, 1) 100%);
-    opacity: 0.8
-}
+    .card::before {
+        box-sizing: initial;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        content: "";
+        bottom: 0;
+        top: 0;
+        right: 0;
+        left: 0;
+        border-radius: 14px;
+        background: rgb(63, 94, 251);
+        background: linear-gradient(90deg, rgba(63, 94, 251, 1) 0%, rgba(240, 50, 89, 1) 100%);
+        opacity: 0.8
+    }
 
-.card::after {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    content: "";
-    bottom: 0;
-    top: 0;
-    right: 0;
-    left: 0;
-    border-radius: 14px;
-    background: rgb(63, 94, 251);
-    background: linear-gradient(90deg, rgba(63, 94, 251, 1) 0%, rgba(240, 50, 89, 1) 100%);
-    clip-path: polygon(28% 13%, 48% 45%, 75% 63%, 100% 99%, 0 100%, 0% 60%, 0 0)
-}
+    .card::after {
+        box-sizing: initial;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        content: "";
+        bottom: 0;
+        top: 0;
+        right: 0;
+        left: 0;
+        border-radius: 14px;
+        background: rgb(63, 94, 251);
+        background: linear-gradient(90deg, rgba(63, 94, 251, 1) 0%, rgba(240, 50, 89, 1) 100%);
+        clip-path: polygon(28% 13%, 48% 45%, 75% 63%, 100% 99%, 0 100%, 0% 60%, 0 0)
+    }
 
 .upper {
     display: flex;
@@ -88,4 +91,20 @@
 .btn22:hover {
     background: #4285f4;
     color: #fff;
+}
+
+.lower #PIN {
+    font-size: 20px;
+    position: absolute;
+    left: 250px;
+    top: 4px;
+    z-index: 1;
+}
+
+.lower #SEC {
+    font-size: 20px;
+    position: absolute;
+    left: 250px;
+    bottom: 2px;
+    z-index: 1;
 }
